@@ -1,0 +1,14 @@
+package com.meteor.extrabotany.common.events;
+
+import net.minecraft.entity.player.EntityPlayer;
+import net.minecraft.entity.player.EntityPlayerMP;
+import net.minecraftforge.event.entity.living.LivingAttackEvent;
+import net.minecraftforge.event.entity.living.LivingHurtEvent;
+
+import com.meteor.extrabotany.common.effects.ModPotionEffect;
+
+import cpw.mods.fml.common.eventhandler.SubscribeEvent;
+
+public class EventDamageLockedDown {
+
+}
