@@ -1,0 +1,6 @@
+package com.meteor.extrabotany.common.lib;
+
+public class LibPotionEffectName {
+	public static final String SLOWPARTICLESORTING = "slowparticlesorting";
+	public static final String FASTPARTICLESORTING = "fastparticlesorting";
+}
